# PruebasIGSTK

./: CMakeLists.txt  HolaMundoQT.cpp  HolaMundoQTGUI.cpp  HolaMundoQTGUI.h  HolaMundoQTGUI.ui  HolaMundo_Mesh.cxx  HolaMundo_Mesh.h  HolaMundo_Mesh_GUI.fl  MouseTrackerTest.cpp  PolarisTracker.cpp  PolarisTracker.h  PolarisTrackerTest.cpp  igstkMHDReader.cpp  igstkNeedleObject.h
